config/breweries-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: breweries-service
  labels:
    app: breweries-service
spec:
  selector:
    matchLabels:
      app: breweries-service
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: breweries-service
    spec:
      containers:
      - image: jmc22071983/breweries-service-kb:0.0.1-SNAPSHOT
        imagePullPolicy: Always
        name: breweries-service
        ports:
        - containerPort: 8072
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: breweries-service
  name: breweries-service
spec:
  type: NodePort
  ports:
  - port: 8072
  selector:
    app: breweries-service
